--- a/sesi-06/assistment2/package.json
+++ b/sesi-06/assistment2/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "browser-router": "^0.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
